# soft-brownian-offset

./: .flake8  README.md  demo.py  requirements.txt  sbo.py  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst
sbo/: __init__.py  sbo.py
