[metadata]
name = sbo
author = Felix
author-email = 10831300+flxai@users.noreply.github.com
summary = SBO defines an iterative approach to translate points by a most likely distance from a given dataset
description-file = README.md
description-content-type = text/markdown

[files]
packages =
    sbo
